--- a/D2html.html
+++ b/D2html.html
@@ -31,7 +31,7 @@
     </ul>
     <a
       href="https://arbordayblog.org/landscapedesign/12-fast-growing-shade-trees/"
-      target="Blank"
+      target="_blank"
       >Enlace</a
     >
     <img src="Ash_Tree.jpg" alt="arbol" />
